fixed wrong margin on mobile breakpoint, now the margin changes to auto

--- a/sass/_partials/_blog-index.scss
+++ b/sass/_partials/_blog-index.scss
@@ -123,6 +123,7 @@
   }
   .blog-page-content {
     width: 80%;
+    margin: auto;
     
   }
   #sidebar{
