--- a/style.css
+++ b/style.css
@@ -1217,7 +1217,8 @@ a.blog-post-button {
         -ms-flex-align: center;
             align-items: center; }
   .blog-page-content {
-    width: 80%; }
+    width: 80%;
+    margin: auto; }
   #sidebar {
     width: 80%;
     text-align: center; }
